style.css
* {
  margin: 0;
  padding: 0;
  font-family: "Source Sans 3", sans-serif;
  box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
  overflow-x: clip;
}

body {
  color: #e2e2f8;
  overflow-x: hidden;
  display: flex;
  flex-direction: column;
  background: #e6e6f3;
}

body h1 {
  font-weight: 550;
  font-size: 42px;
  color: #e2e2f8;
}

body h1 span {
  font-size: 40px;
  padding-right: 25px;
}

.floating-circle {
  width: 150px;
  height: 150px;
  border: 10px solid #d3dcdf;
  border-radius: 50%;
  position: absolute;
  pointer-events: none;
  z-index: -1000;
}

/*--------------------------navbar-----------------------*/

nav {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-wrap: wrap;
  padding: 10px 5%;
  z-index: 1000;
}

.nav-logo {
  width: 80px;
  background: #e6e6f3;
  padding: 10px;
  border-radius: 40px;
}

nav .nav-links ul li {
  display: inline-block;
  list-style: none;
  margin: 10px 2px;
}

.navbar-link {
  color: #1b1729;
  text-decoration: none;
  font-size: 18px;
  position: relative;
  padding: 5px 10px;
  border-radius: 25px;
  background: #e6e6f3;
}

.navbar-link span {
  color: #1b1729;
}

.navbar-link:hover {
  color: #6e78a5;
}

nav .social-media {
  padding: 0;
  background: #e6e6f3;
  border-radius: 15px;
}

nav .social-media ul li {
  display: inline-block;
  margin: 0 15px;
  font-size: 30px;
  cursor: pointer;
  transition: transform 0.5s;
}

nav .social-media ul li a {
  color: #1b1729;
}

nav .social-media ul li:hover {
  transform: translateY(-5px);
}

nav .social-media ul li:hover a {
  color: #6e78a5;
}

/*--------------------------home----------------------*/

.home {
  width: 100%;
  padding-bottom: 2000px;
  background: #e6e6f3;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.home-logo {
  position: fixed;
  margin-top: 50vh;
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 0;
}

.main-logo {
  position: absolute;
  width: 160px;
}

.segment {
  position: absolute;
  display: block;
  align-items: center;
}

.segment1 {
  width: 120px;
  height: 120px;
  border: solid 4px #d47636;
  border-radius: 50%;
}

.segment2 {
  width: 160px;
  height: 160px;
  border: solid 2px #c6aed2;
  border-radius: 50%;
}

.segment3 {
  width: 180px;
  height: 180px;
  border: solid 3px #1b1729;
  border-radius: 50%;
}

.segment4 {
  width: 200px;
  height: 200px;
  border: solid 6px #80c3b3;
  border-radius: 50%;
}

.segment5 {
  width: 240px;
  height: 240px;
  border: solid 4px #d47636;
  border-radius: 50%;
}

.segment6 {
  width: 260px;
  height: 260px;
  border: solid 3px #1b1729;
  border-radius: 50%;
}

.home-text {
  font-size: 20px;
  color: #1b1729;
  margin-top: 70vh;
  position: fixed;
}

.home-text h1 {
  font-size: 60px;
  color: #1b1729;
}

.home-text h1 span {
  font-size: 72px;
  color: #1b1729;
}

/*------------------------about-----------------------*/

#about {
  padding: 2% 0;
  height: 110vh;
  background: #1b1729;
  z-index: 10;
}

#about .container {
  height: 100%;
  display: flex;
}

#about h1 {
  margin-bottom: 20px;
}

#about .row {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
}

.about-col-1 {
  flex-basis: 40%;
  transform: scale(1.5) translateX(40%) translateY(400px);
}

.about-col-1 img {
  margin: 10% 0 10% 15%;
  position: relative;
  width: 80%;
}

.about-col-2 {
  flex-basis: 50%;
  margin: 5%;
  transform: translateX(3000px);
}

.about-col-2 p {
  padding-top: 5px;
  font-size: 20px;
  line-height: 1.2;
}

.tab-titles {
  display: flex;
  margin: 30px 0 30px;
}

.tab-links {
  margin-right: 80px;
  font-size: 24px;
  font-weight: 600;
  color: #e2e2f8;
  cursor: pointer;
  position: relative;
  padding: 5px 10px;
  border: 3px solid transparent;
  border-radius: 25px;
}

.skills-link {
  border: 3px solid #d47636;
}

.skills-link:hover {
  background: #d47636;
}

.skills-link.active-link {
  color: #1b1729;
  border: 3px solid #d47636;
  background: #d47636;
}

.education-link {
  border: 3px solid #c6aed2;
}

.education-link:hover {
  background: #c6aed2;
}

.education-link.active-link {
  color: #1b1729;
  border: 3px solid #c6aed2;
  background: #c6aed2;
}

.experience-link {
  border: 3px solid #80c3b3;
}

.experience-link:hover {
  background: #80c3b3;
}

.experience-link.active-link {
  color: #1b1729;
  border: 3px solid #80c3b3;
  background: #80c3b3;
}

.tab-contents.skills.active-tab {
  display: flex;
  flex-wrap: wrap;
}

.skillcard {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  margin-bottom: 20px;
}

.skillcard img {
  margin: 10px 20px;
  width: 50px;
  height: 50px;
  border-radius: 50%;
  background: #646b89;
  box-shadow: 0px 0px 3px 3px #6e78a5;
}

.skillcard h3 {
  font-size: 16px;
}

.tab-contents ul li {
  font-size: 18px;
  font-weight: 500;
  line-height: 1.5;
  list-style: none;
  margin: 10px 0;
}

.tab-contents ul li span {
  color: #e2e2f8;
  font-weight: 500;
  font-size: 20px;
  font-weight: 580;
}

.tab-contents {
  display: none;
}

.tab-contents.active-tab {
  display: block;
}

/*------------------------services-----------------------*/

#services {
  padding: 1200px 0 900px 0;
  height: 110vh;
  background: #e6e6f3;
}

#services .container {
  padding: 50px 5%;
  height: 100%;
}

#services h1 {
  position: relative;
  color: #1b1729;
  margin-bottom: 80px;
  z-index: 0;
}

.services-list {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  grid-gap: 40px;
  color: #1b1729;
  margin: 10% 0;
}

.service1 {
  background: #d47636;
}

.service1 a {
  color: #d47636;
}

.service2 {
  background: #c6aed2;
}

.service2 a {
  color: #c6aed2;
}

.service3 {
  background: #80c3b3;
}

.service3 a {
  color: #80c3b3;
}
/* ... */

